# everyday

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
config/sentence/: sentence.ini
config/setting/: identify.ini
config/star/: star12.ini
config/todo/: todo.xml
include/: almanac.h  baidu.h  bilibili.h  calendar.h  customtitlebar.h  customtooltip.h  douyin.h  everyday.h  jian.h  sentence.h  setting.h  todolist.h  todoremind.h  trayicon.h  wangyiy.h  weather.h  weibo.h  zhihu.h
rc/: icon.qrc
source/: almanac.cpp  baidu.cpp  bilibili.cpp  calendar.cpp  customtitlebar.cpp  customtooltip.cpp  douyin.cpp  everyday.cpp  jian.cpp  main.cpp  sentence.cpp  setting.cpp  todolist.cpp  todoremind.cpp  trayicon.cpp  wangyiy.cpp  weather.cpp  weibo.cpp  zhihu.cpp
ui/: almanac.ui  baidu.ui  bilibili.ui  calendar.ui  customtitlebar.ui  customtooltip.ui  douyin.ui  everyday.ui  jian.ui  sentence.ui  setting.ui  todolist.ui  todoremind.ui  wangyiy.ui  weather.ui  weibo.ui  zhihu.ui
